Escape shortcut mnemonic markers (&) in tab texts

By default, automatic accelerators are enabled
(at least in KDE), and thus '&' characters
in tab names are erroneously treated as requests
for accelerators.

BUG: 441340